Added about my week and day

--- a/test.html
+++ b/test.html
@@ -8,6 +8,8 @@
     <h1>Test File</h1>
 
     <ht>Hello Fortuna!</ht>
+    <p>My first week</p>
+    <p>My first day was simple. I didn't do much.</p>
 
 </body>
 </html>
