changed headers and added a paragraph

--- a/test.html
+++ b/test.html
@@ -7,9 +7,9 @@
 <body>
     <h1>Test File</h1>
 
-    <ht>Hello Fortuna!</ht>
-    <p>My first week</p>
+    <h1>Hello Fortuna!</h1>
+    <h2>My first week</h2>
     <p>My first day was simple. I didn't do much.</p>
-
+    <p>My second day has been going great. We set up our computer system and are practicing within those systems.</p>
 </body>
 </html>
